--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-/build_local/
 /cache/
+/build_*/
 /node_modules/
+/source/assets/build/
 /vendor/
 /.idea/
 /.vscode/
@@ -10,3 +11,4 @@ npm-debug.log
 # /build_staging/
 # /build_production/
 # /source/assets/build/
+.DS_Store
